Third commit for python challenge

--- a/PyPoll/main2.ipynb
+++ b/PyPoll/main2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,9 +116,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Election Results\n",
+      "___________________\n",
+      "\n",
+      "Total Votes: 3521001\n",
+      "___________________\n",
+      "\n",
+      "Khan: 63.000% (2218231)\n",
+      "Correy: 20.000% (704200)\n",
+      "Li: 14.000% (492940)\n",
+      "O'Tooley: 3.000% (105630)\n",
+      "___________________\n",
+      "\n",
+      "Winner: Khan\n",
+      "___________________\n"
+     ]
+    }
+   ],
    "source": [
     "#Prints out the election results\n",
     "print('Election Results')\n",
@@ -140,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,6 +169,7 @@
     "import sys\n",
     "sys.stdout = open('main_PyPoll.txt','w')\n",
     "\n",
+    "#Prints remaining analysis\n",
     "print('Election Results')\n",
     "print('___________________')\n",
     "print('')\n",
@@ -159,7 +181,9 @@
     "print('___________________')\n",
     "print('')\n",
     "print(f'Winner: {winner}')\n",
-    "print('___________________')"
+    "print('___________________')\n",
+    "\n",
+    "sys.stdout.close()"
    ]
   },
   {
