--- a/Pybank/main.ipynb
+++ b/Pybank/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,9 +112,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Financial Analysis\n",
+      "___________________\n",
+      "\n",
+      "Total Months: 86\n",
+      "Total: $38382578\n",
+      "Average Change: $-2315.12\n",
+      "Greatest Increase In Profits: Feb-2012 ($1926159)\n",
+      "Greatest Decrease In Profits: Sep-2013 ($-2196167)\n"
+     ]
+    }
+   ],
    "source": [
     "#Establishes the precision for average change\n",
     "n = 2\n",
@@ -131,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,15 +161,10 @@
     "print(f'Total: ${net_total}')\n",
     "print(f'Average Change: ${avg_change:.{n}f}')\n",
     "print(f'Greatest Increase In Profits: {month_prof} (${great_prof})')\n",
-    "print(f'Greatest Decrease In Profits: {month_loss} (${great_loss})')"
+    "print(f'Greatest Decrease In Profits: {month_loss} (${great_loss})')\n",
+    "\n",
+    "sys.stdout.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
