Fourth commit to python-challenge, includes new comments on main.py files

--- a/PyPoll/main2.ipynb
+++ b/PyPoll/main2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,17 +21,17 @@
     "    elec_list = list(zip(*csv_read_in))\n",
     "    #Equates the total number of votes to be the length of the columns\n",
     "    #in the file\n",
-    "    vote_total = int(len(elec_list[0]))"
+    "    vote_total = len(elec_list[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Creates an empty list to store candidate names\n",
-    "candidate = [elec_list[2][0]]\n",
+    "#Creates an list to store candidate names\n",
+    "candidate = [elec_list[2][0]] \n",
     "\n",
     "#Loops through candidate column up until second to last row\n",
     "for x in range(vote_total-1):\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,30 +116,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Election Results\n",
-      "___________________\n",
-      "\n",
-      "Total Votes: 3521001\n",
-      "___________________\n",
-      "\n",
-      "Khan: 63.000% (2218231)\n",
-      "Correy: 20.000% (704200)\n",
-      "Li: 14.000% (492940)\n",
-      "O'Tooley: 3.000% (105630)\n",
-      "___________________\n",
-      "\n",
-      "Winner: Khan\n",
-      "___________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Prints out the election results\n",
     "print('Election Results')\n",
@@ -163,7 +142,45 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread IPythonHistorySavingThread:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/pramodphilip/opt/anaconda3/lib/python3.8/site-packages/IPython/core/history.py\", line 780, in writeout_cache\n",
+      "    self._writeout_input_cache(conn)\n",
+      "  File \"/Users/pramodphilip/opt/anaconda3/lib/python3.8/site-packages/IPython/core/history.py\", line 763, in _writeout_input_cache\n",
+      "    conn.execute(\"INSERT INTO history VALUES (?, ?, ?, ?)\",\n",
+      "sqlite3.IntegrityError: UNIQUE constraint failed: history.session, history.line\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/pramodphilip/opt/anaconda3/lib/python3.8/site-packages/IPython/core/history.py\", line 834, in run\n",
+      "    self.history_manager.writeout_cache(self.db)\n",
+      "  File \"<decorator-gen-16>\", line 2, in writeout_cache\n",
+      "  File \"/Users/pramodphilip/opt/anaconda3/lib/python3.8/site-packages/IPython/core/history.py\", line 58, in needs_sqlite\n",
+      "    return f(self, *a, **kw)\n",
+      "  File \"/Users/pramodphilip/opt/anaconda3/lib/python3.8/site-packages/IPython/core/history.py\", line 783, in writeout_cache\n",
+      "    print(\"ERROR! Session/line number was not unique in\",\n",
+      "ValueError: I/O operation on closed file.\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/pramodphilip/opt/anaconda3/lib/python3.8/threading.py\", line 932, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"<decorator-gen-17>\", line 2, in run\n",
+      "  File \"/Users/pramodphilip/opt/anaconda3/lib/python3.8/site-packages/IPython/core/history.py\", line 58, in needs_sqlite\n",
+      "    return f(self, *a, **kw)\n",
+      "  File \"/Users/pramodphilip/opt/anaconda3/lib/python3.8/site-packages/IPython/core/history.py\", line 836, in run\n",
+      "    print((\"The history saving thread hit an unexpected error (%s).\"\n",
+      "ValueError: I/O operation on closed file.\n"
+     ]
+    }
+   ],
    "source": [
     "#Exports the election results to a .txt file\n",
     "import sys\n",
@@ -185,6 +202,13 @@
     "\n",
     "sys.stdout.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
